# my-mcp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: linear_client.rs  mcp_server_impl.rs  mod.rs
src/core/: application.rs  mod.rs
src/domain/: issue.rs  label.rs  mod.rs  project.rs  ticket.rs  user.rs  workspace.rs
src/ports/: linear_service.rs  mcp_server.rs  mod.rs  ticket_service.rs
src/providers/: mod.rs
src/providers/linear/: adapter.rs  client.rs  mod.rs
