[package]
name = "linear-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Model Context Protocol server using Ports and Adapters architecture"
license = "MIT OR Apache-2.0"

[features]
default = ["linear", "tokio"]
linear = []
dev = ["tokio"]

[dependencies]
# Core dependencies
anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# MCP dependencies
rmcp = { version = "0.2.0", features = ["server"] }

# Linear API
# linear-sdk = { version = "0.1", optional = true }  # Not available on crates.io

# GraphQL client alternative if linear-sdk doesn't work
graphql_client = "0.14"
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"